--- a/tests/Motion/testmotiongui.ui
+++ b/tests/Motion/testmotiongui.ui
@@ -189,7 +189,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>1000.0</string>
+       <string>10.0</string>
       </property>
      </widget>
     </item>
@@ -237,7 +237,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>-1000.0</string>
+       <string>-10.0</string>
       </property>
      </widget>
     </item>
@@ -622,7 +622,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>300.0</string>
+       <string>800.0</string>
       </property>
      </widget>
     </item>
@@ -642,7 +642,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>50000.0</string>
+       <string>100000.0</string>
       </property>
      </widget>
     </item>
@@ -663,6 +663,94 @@
       </property>
       <property name="text">
        <string>60</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_g00_test">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>300</y>
+     <width>551</width>
+     <height>151</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>G00_Test</string>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_5">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>X
+(绝对)(mm)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="le_x_g00_target_pos">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>0.0000</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QPushButton" name="pb_start_g00">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>开始G00</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QPushButton" name="pb_stop_auto">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>停止</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="pb_pause_auto">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>暂停</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <widget class="QPushButton" name="pb_resume_auto">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>继续</string>
       </property>
      </widget>
     </item>
