--- a/Conf/gui.qss
+++ b/Conf/gui.qss
@@ -1,39 +1,3 @@
-/* This is the qss file for windows in drill project */
-/* author: x */
-/* Style: metal */
-
-/********************大窗体开始********************/
-QWidget:focus
-{
-/* 避免获得焦点的部件产生虚框
-*/
-outline: none;
-}
-
-QGroupBox {
-    background: qlineargradient(spread:reflect, x1:1, y1:1, x2:0, y2:0,
-                stop:0 rgba(255,255,255, 0), stop:1 rgba(71, 154, 199, 70));
-    border: 0px solid gray;
-    border-radius: 9px;
-    margin-top: 1em;
-}
-
-QGroupBox::title {
-    color: yellow;
-    subcontrol-origin: margin;
-    left: 10px;
-    padding: 0 3px 0 3px;
-}
-
-
-QMessageBox
-{
-background: qlineargradient(spread:reflect, x1:0, y1:1, x2:0, y2:-0.1,
-                stop:0 rgba(255, 192, 151, 255), stop:1 rgba(239,97,0, 255));
-}
-
-
-/**/
 QWidget
 {
 background: qlineargradient(spread:reflect, x1:0, y1:1, x2:0, y2:-0.1,
@@ -41,39 +5,52 @@ background: qlineargradient(spread:reflect, x1:0, y1:1, x2:0, y2:-0.1,
 font: 12pt "Monospace";
 }
 
-QPushButton:pressed
-{
-color:rgb(253,236,208);
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
-                        stop:0 rgb(165, 165, 165), stop:1 rgb(66,78,105));
-border:6px groove rgb(59, 59, 59);
-border-radius:3px;
-}
-
-QPushButton:checked
-{
-color:rgb(253,236,208);
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
-                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
-border:6px groove rgb(59, 59, 59);
-border-radius:3px;
-}
-
 QPushButton
 {
 color:rgb(253,236,208);
 background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
                         stop:0 rgb(165, 165, 165), stop:1 rgb(66,78,105));
-border:3px groove rgb(59, 59, 59);
+border:0px groove rgb(59, 59, 59);
 border-radius:3px;
-font: 12pt "Ubuntu";
+font: 12pt "Monospace";
+}
+
+QPushButton:hover
+{
+border:1px groove rgb(59, 59, 59);
+}
+
+QPushButton:hover:pressed
+{
+border:3px groove rgb(59, 59, 59);
+}
+
+QPushButton:checked
+{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
+                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
+border:2px groove rgb(59, 59, 59);
+}
+
+QPushButton:checked:hover
+{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
+                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
+border:3px groove rgb(59, 59, 59);
+}
+
+QPushButton:checked:pressed
+{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
+                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
+border:4px groove rgb(59, 59, 59);
 }
 
 QLabel
 {
 background-color: transparent;
 
-color: rgb(127,255,0);
+color: rgb(64,255,127);
 font-family: "Monospace";
 font-size: 12pt;
 
@@ -83,67 +60,68 @@ border-color: rgb(0,255,127);
 border-radius: 0px;
 }
 
+#CoordPanel QLabel#lb_cmd,
+#CoordPanel QLabel#lb_act,
+#CoordPanel QLabel#lb_machcmd,
+#CoordPanel QLabel#lb_machact,
+#CoordPanel QLabel#lb_coord,
+#CoordPanel QLabel#lb_global{
+color: rgb(255, 255, 10);
+font-weight: bold;
+}
+
+#CoordPanel QLabel#lb_x,
+#CoordPanel QLabel#lb_y,
+#CoordPanel QLabel#lb_z,
+#CoordPanel QLabel#lb_b,
+#CoordPanel QLabel#lb_c,
+#CoordPanel QLabel#lb_a,
+#CoordPanel QLabel#lb_ofs_x,
+#CoordPanel QLabel#lb_ofs_y,
+#CoordPanel QLabel#lb_ofs_z,
+#CoordPanel QLabel#lb_ofs_b,
+#CoordPanel QLabel#lb_ofs_c,
+#CoordPanel QLabel#lb_ofs_a,
+#CoordPanel QLabel#lb_select_coord {
+color: rgb(255, 255, 10);
+font-weight: bold;
+}
+
+#CoordPanel QPushButton {
+    font-weight: bold;
+}
+
 /* 未下拉时，QComboBox的样式 */
 QComboBox {
     border-radius: 3px;
     padding: 1px 18px 1px 3px;
     background: transparent; 
     border: 1px solid gray; 
-	color:rgb(127,255,0);
+    color: rgb(64,255,127);
     font-weight: bold;
 	border-color: #E5E5E5;
 	background-color: transparent;
 }
 QComboBox:on {
-    color: rgb(255,193,37);
-    background-color: rgb(127,255,212);
+    color: rgb(64,255,127);
+    background-color: rgb(255,231,186);
 }
 
+QGroupBox::title
+{
+subcontrol-origin:margin;
+subcontrol-position:top center;
+padding:0 3px;
+color: rgb(255, 255, 10);
+font-weight: bold;
+}
 
 QLineEdit
 {
-border:3px groove rgb(59, 59, 59);
+border:1px groove rgb(59, 59, 59);
+border-color: rgb(64,255,127);
 color:rgb(253,236,208);
-font: 12pt "Ubuntu";
 }
-/**/
-
-#TestPowerWidget
-{
-background: qlineargradient(spread:reflect, x1:0, y1:1, x2:0, y2:-0.1,
-                stop:0 rgba(29,47,59, 255), stop:1 rgba(94, 98, 99, 255));
-font: 16pt "Ubuntu";
-}
-#TestPowerWidget QPushButton:pressed
-{
-color:rgb(253,236,208);
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
-                        stop:0 rgb(165, 165, 165), stop:1 rgb(66,78,105));
-border:6px groove rgb(59, 59, 59);
-border-radius:3px;
-}
-#TestPowerWidget QPushButton:checked
-{
-color:rgb(253,236,208);
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
-                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
-border:6px groove rgb(59, 59, 59);
-border-radius:3px;
-}
-#TestPowerWidget QPushButton
-{
-color:rgb(253,236,208);
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
-                        stop:0 rgb(165, 165, 165), stop:1 rgb(66,78,105));   
-border:3px groove rgb(59, 59, 59);
-border-radius:3px;
-}
-#TestPowerWidget QLabel
-{
-color: rgb(127,255,0);
-/*color: rgb(230,230,230);*/
-}
-
 
 QProgressBar::chunk
 {
@@ -154,89 +132,5 @@ margin: 0.5px;
                 stop:0 rgba(82,136,112, 255), stop:0.995 rgb(240,116,132),
                 stop:0.9951 rgba(253, 236, 208, 255), stop:1 rgba(253, 236, 208, 255));
  /*width:20px;*/
-}
-
-
-
-QScrollBar:vertical
-{
-    width:40px;
-    background:rgba(0,0,0,0);
-    margin:0px,0px,0px,0px;
-    padding-top:40px;
-    padding-bottom:40px;
-    border-radius: 5px;
-}
-
-QScrollBar::handle:vertical
-{
-    width:40px;
-    background:qlineargradient(spread:reflect, x1:0, y1:0, x2:0.5, y2:0,
-    stop:0 rgba(29,47,59, 255), stop:0.4 rgba(165, 165, 165, 255));
-    border-top: 4px solid qlineargradient(spread:reflect, x1:0, y1:0, x2:0.5, y2:0,
-            stop:0 rgba(29,47,59, 255), stop:0.4 rgba(165, 165, 165, 255));
-    border-bottom: 4px solid qlineargradient(spread:reflect, x1:0, y1:0, x2:0.5, y2:0,
-            stop:0 rgba(29,47,59, 255), stop:0.4 rgba(165, 165, 165, 255));
-    min-height:30;
-}
-
-QScrollBar::add-line:vertical
-{
-    height:40px;
-    width:40px;
-    border-bottom-right-radius:5px;
-    border-bottom-left-radius:15px;
-    background-color:qconicalgradient(cx:0.5, cy:0.9, angle:-90,
-    stop:0 rgba(29, 47, 59, 0),
-    stop:0.35 rgba(165, 165, 165, 200),
-    stop:0.5 rgba(29, 47, 59, 255),
-    stop:0.65 rgba(165, 165, 165, 200),
-    stop:1 rgba(29, 47, 59, 0));
-    subcontrol-position:bottom;
-}
-
-QScrollBar::add-line:vertical:pressed
-{
-    height:40px;
-    width:40px;
-    border-bottom-right-radius:5px;
-    border-bottom-left-radius:15px;
-    background-color:qconicalgradient(cx:0.5, cy:1, angle:-90,
-    stop:0 rgba(29, 47, 59, 0),
-    stop:0.35 rgba(165, 165, 165, 200),
-    stop:0.5 rgba(29, 47, 59, 255),
-    stop:0.65 rgba(165, 165, 165, 200),
-    stop:1 rgba(29, 47, 59, 0));
-    subcontrol-position:bottom;
-}
-
-QScrollBar::sub-line:vertical
-{
-    height:40px;
-    width:40px;
-    border-top-right-radius:5px;
-    border-top-left-radius:15px;
-    background-color:qconicalgradient(cx:0.5, cy:0.1, angle:-90,
-    stop:0 rgba(29, 47, 59, 255),
-    stop:0.15 rgba(165, 165, 165, 200),
-    stop:0.5 rgba(29, 47, 59, 0),
-    stop:0.85 rgba(165, 165, 165, 200),
-    stop:1 rgba(29, 47, 59, 255));
-    subcontrol-position:top;
-}
-
-QScrollBar::sub-line:vertical:pressed
-{
-    height:40px;
-    width:40px;
-    border-top-right-radius:5px;
-    border-top-left-radius:15px;
-    background-color:qconicalgradient(cx:0.5, cy:0, angle:-90,
-    stop:0 rgba(29, 47, 59, 255),
-    stop:0.15 rgba(165, 165, 165, 200),
-    stop:0.5 rgba(29, 47, 59, 0),
-    stop:0.85 rgba(165, 165, 165, 200),
-    stop:1 rgba(29, 47, 59, 255));
-    subcontrol-position:top;
 }
 
