--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -29,36 +29,53 @@
     <enum>QFrame::Raised</enum>
    </property>
   </widget>
-  <widget class="QFrame" name="frame_move">
+  <widget class="QTabWidget" name="tabWidget_main">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>360</y>
-     <width>471</width>
-     <height>621</height>
+     <y>350</y>
+     <width>1481</width>
+     <height>711</height>
     </rect>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
+   <property name="currentIndex">
+    <number>0</number>
    </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
+   <widget class="QWidget" name="tab_move">
+    <attribute name="title">
+     <string>Move</string>
+    </attribute>
+    <widget class="QGroupBox" name="groupBox_pm">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>20</y>
+       <width>501</width>
+       <height>631</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>PointMove</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_io">
+    <attribute name="title">
+     <string>IO</string>
+    </attribute>
+   </widget>
   </widget>
-  <widget class="QFrame" name="frame_info">
+  <widget class="QGroupBox" name="groupBox_info">
    <property name="geometry">
     <rect>
      <x>1500</x>
      <y>10</y>
      <width>411</width>
-     <height>441</height>
+     <height>451</height>
     </rect>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
+   <property name="title">
+    <string>Status Panel</string>
    </property>
   </widget>
  </widget>
