--- a/App/Resource/app_resource.qrc
+++ b/App/Resource/app_resource.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/app/ui/qss">
-        <file>appgui.qss</file>
-    </qresource>
+    <qresource prefix="/app/ui/qss"/>
 </RCC>
