--- a/Conf/gui.qss
+++ b/Conf/gui.qss
@@ -89,18 +89,63 @@ color: rgb(255, 255, 10);
 font-weight: bold;
 }
 
-#MovePanel QCheckBox#checkbox_le_pm_x,
-#MovePanel QCheckBox#checkbox_le_pm_y,
-#MovePanel QCheckBox#checkbox_le_pm_z,
-#MovePanel QCheckBox#checkbox_le_pm_b,
-#MovePanel QCheckBox#checkbox_le_pm_c,
-#MovePanel QCheckBox#checkbox_le_pm_a {
-color: rgb(255, 255, 10);
-font-weight: bold;
-background: transparent;
+#MovePanel QPushButton#pb_check_le_pm_x,
+#MovePanel QPushButton#pb_check_le_pm_y,
+#MovePanel QPushButton#pb_check_le_pm_z,
+#MovePanel QPushButton#pb_check_le_pm_b,
+#MovePanel QPushButton#pb_check_le_pm_c,
+#MovePanel QPushButton#pb_check_le_pm_a {
+    color: rgb(255, 255, 10);
+    font-weight: bold;
+}
+
+/* tab widget */
+QTabWidget::pane { /* The tab widget frame */
+    border-top: 2px solid #C2C7CB;
+}
+ 
+QTabWidget::tab-bar {
+    left: 5px; /* move to the right by 5px */
+}
+ 
+/* Style the tab using the tab sub-control. Note that
+    it reads QTabBar _not_ QTabWidget */
+QTabBar::tab {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+    border: 2px solid #C4C4C3;
+    border-bottom-color: #C2C7CB; /* same as the pane color */
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    min-width: 8ex;
+    padding: 2px;
+}
+ 
+QTabBar::tab:hover {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #fafafa, stop: 0.4 #f4f4f4,
+                                stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+}
+
+QTabBar::tab:selected {
+    background: rgb(255, 255, 10); 
+}
+ 
+QTabBar::tab:selected {
+    border-color: #9B9B9B;
+    border-bottom-color: #C2C7CB; /* same as pane color */
+}
+ 
+QTabBar::tab:!selected {
+    margin-top: 2px; /* make non-selected tabs look smaller */
 }
 
 #CoordPanel QPushButton {
+    font-weight: bold;
+}
+
+#IOPanel QPushButton {
     font-weight: bold;
 }
 
