--- a/App/IOPanel/IOPanel.ui
+++ b/App/IOPanel/IOPanel.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1058</width>
-    <height>592</height>
+    <width>1052</width>
+    <height>615</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox_io">
      <property name="title">
       <string>IO Settings</string>
