--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -39,7 +39,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab_move">
     <attribute name="title">
@@ -62,6 +62,11 @@
    <widget class="QWidget" name="tab_io">
     <attribute name="title">
      <string>IO</string>
+    </attribute>
+   </widget>
+   <widget class="QWidget" name="tab_power">
+    <attribute name="title">
+     <string>Power</string>
     </attribute>
    </widget>
   </widget>
