--- a/App/MovePanel/MovePanel.ui
+++ b/App/MovePanel/MovePanel.ui
@@ -658,7 +658,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="frame_st_ecat">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
