--- a/Conf/gui.qss
+++ b/Conf/gui.qss
@@ -184,6 +184,18 @@ border-color: rgb(64,255,127);
 color:rgb(253,236,208);
 }
 
+#MovePanel QFrame#frame_button_pm,
+#MovePanel QFrame#frame_st_ecat,
+#MovePanel QFrame#frame_le_pm,
+#MovePanel QFrame#frame_pmmode,
+#MovePanel QFrame#frame_coord_type,
+#MovePanel QFrame#frame_pm_mfr {
+    background: transparent;
+    border: 1px groove ;
+    border-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
+                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
+}
+
 QProgressBar::chunk
 {
 /*width: 10px;*/
