temp save 20240315 17:39, TODO: task manager 逻辑

--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -83,6 +83,19 @@
     <string>Status Panel</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pb_test">
+   <property name="geometry">
+    <rect>
+     <x>1570</x>
+     <y>600</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>test</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
