--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -39,7 +39,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab_move">
     <attribute name="title">
@@ -56,6 +56,81 @@
      </property>
      <property name="title">
       <string>PointMove</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_test_start">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>120</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>test_start</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_test_pause">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>170</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>test_pause</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_test_resume">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>230</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>test_resume</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_test_stop">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>290</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>test_stop</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_test_estop">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>340</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>test_estop</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="test_codeeditor_widget" native="true">
+     <property name="geometry">
+      <rect>
+       <x>870</x>
+       <y>80</y>
+       <width>481</width>
+       <height>521</height>
+      </rect>
      </property>
     </widget>
    </widget>
