--- a/App/GCodePanel/GCodePanel.ui
+++ b/App/GCodePanel/GCodePanel.ui
@@ -6,15 +6,38 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>730</width>
-    <height>548</height>
+    <width>597</width>
+    <height>399</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="2" rowspan="2">
+   <item row="1" column="0" colspan="2">
+    <widget class="QWidget" name="widget_editor" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>250</width>
+       <height>350</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QPushButton" name="pb_loadfile">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>LoadFile</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2" rowspan="2">
     <widget class="QGroupBox" name="groupBox_edit">
      <property name="title">
       <string>Edit</string>
@@ -23,14 +46,14 @@
       <item>
        <widget class="QPushButton" name="pb_edit">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
+          <width>60</width>
           <height>40</height>
          </size>
         </property>
@@ -51,14 +74,14 @@
       <item>
        <widget class="QPushButton" name="pb_save">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
+          <width>60</width>
           <height>40</height>
          </size>
         </property>
@@ -76,14 +99,14 @@
       <item>
        <widget class="QPushButton" name="pb_save_as">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
+          <width>60</width>
           <height>40</height>
          </size>
         </property>
@@ -94,7 +117,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Save As..</string>
+         <string>Save As</string>
         </property>
        </widget>
       </item>
@@ -114,14 +137,14 @@
       <item>
        <widget class="QPushButton" name="pb_cancel">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
+          <width>60</width>
           <height>40</height>
          </size>
         </property>
@@ -139,7 +162,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="3" rowspan="2">
+   <item row="0" column="3" rowspan="2">
     <widget class="QGroupBox" name="groupBox_machining">
      <property name="title">
       <string>Machining</string>
@@ -148,15 +171,15 @@
       <item>
        <widget class="QPushButton" name="pb_start">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -173,15 +196,15 @@
       <item>
        <widget class="QPushButton" name="pb_pause">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -198,15 +221,15 @@
       <item>
        <widget class="QPushButton" name="pb_resume">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -223,15 +246,15 @@
       <item>
        <widget class="QPushButton" name="pb_stop">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -261,15 +284,15 @@
       <item>
        <widget class="QPushButton" name="pb_ack">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -286,15 +309,15 @@
       <item>
        <widget class="QPushButton" name="pb_estop">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>50</height>
+          <width>50</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -311,44 +334,8 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="pb_loadfile">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>LoadFile</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLineEdit" name="le_current_file"/>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QWidget" name="widget_editor" native="true">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>470</height>
-      </size>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+    <widget class="QLineEdit" name="le_current_file"/>
    </item>
   </layout>
  </widget>
